src/assets/css/Pro-Search.css
.wrapContent .MuiDataGrid-root .MuiDataGrid-window{overflow: hidden;}
.wrapSearch{}
.StickySrh,.StickBarCtrl,.wrapSearch .MuiDataGrid-root .MuiDataGrid-columnsContainer{position: sticky; top: 0; background-color: #fff; z-index: 99;}
.StickBarCtrl{top: 120px;}
.wrapSearch .MuiDataGrid-root .MuiDataGrid-columnsContainer{ top: 162px;}
#left-button.disabled svg,#right-button.disabled svg{color: #ebecec;}

.wrapSearch .MuiFormLabel-root{ font-size: 16px; font-weight: 500; color: #919191;}
.wrapSearch .MuiFormLabel-root.Mui-focused,.excluded-pro .MuiFormLabel-root{color: #919191}
/* .displayTable{overflow-x: hidden!important;} */
/* .displayTable [class*="makeStyles-paper"]{overflow-x: auto;}
.displayTable .MuiTableContainer-root{width: 200vw!important;} */
/* .displayTable{max-height: calc(100vh - 300px);} */
.displayTable .tableContent{max-height: calc(100vh - 300px);min-width:2400px;}
.tableContent{box-shadow: none;overflow:auto;/*position: sticky;top: 0;z-index: 10;*/}
.tableContent tr>*{color: #202124;border-bottom-color: #fff; border-right: 1px solid #fff;font-family: "Sarabun";}
.tableContent thead{position: relative; z-index: 2;}
/* .tableContent thead tr:nth-child(1) th{background: white;
    position: sticky;
    top: 0;
    z-index: 10;} */
.tableContent thead>tr,.tableContent thead>tr .MuiTableCell-stickyHeader{background-color: #66c792;}
.tableContent thead>tr label span{font-size: 14px; font-weight: 500;}
.tableContent tbody>tr{background-color: #E2E6EF;white-space: nowrap;}
.tableContent tbody>tr .disabled{opacity: .35; pointer-events: none;}
.tableContent tbody>tr.MuiTableRow-root.Mui-selected, .tableContent tbody>tr.MuiTableRow-root.Mui-selected:hover{background-color: #E2E6EF;}
.tableContent thead>tr>*,.tableContent tbody>tr>*{padding:8px 10px;max-width: 115px;}
.tableContent .MuiCheckbox-colorSecondary.Mui-checked{color:rgba(0, 0, 0, 0.54);}
.tableContent tr>*:first-child,
.tableContent tr>*:nth-child(2),
.tableContent tr>*:nth-child(3),
.tableContent tr>*:nth-child(4){position: sticky; left: 0; z-index: 3;background-color: #E2E6EF; box-sizing: border-box;}
.tableContent tr>*:nth-child(2){left: 48px;}
.tableContent tr>*:nth-child(3){left: 96px; min-width: 50px;}
.tableContent tr>*:nth-child(4){left: 182px; min-width: 115px; box-shadow: 3px 0 1px rgba(0,0,0,0.15);}

